--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.2.2
-snowflake-connector-python==2.8.3
-Flask-Cors==3.0.10
-cryptography==38.0.4
-gunicorn==20.1.0
+Flask==3.0.0
+snowflake-connector-python==3.0.4
+pandas==1.5.3
+pyarrow==14.0.1
+Flask-Cors==4.0.0
+cryptography==41.0.4
+gunicorn==21.2.0
