--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
+
 Flask==3.0.0
-snowflake-connector-python==3.0.4
-pandas==1.5.3
-numpy==1.23.5
-pyarrow==14.0.1
+snowflake-connector-python[pandas]==3.10.0
 Flask-Cors==4.0.0
-cryptography==40.0.2
 gunicorn==21.2.0
