--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 
 Flask==3.0.0
-snowflake-connector-python[pandas]==3.10.0
+snowflake-connector-python[pandas]==3.7.1
 Flask-Cors==4.0.0
 gunicorn==21.2.0
+cryptography==41.0.7
